- Improved: Animated menu icons in bottom bar when navigating
- Improved: Network and user interface behavior when offline (#492)
- Improved: Stock overview page has new status filter "not fresh" for combined results (#661)
- Improved: "Should not be frozen" toggle on master product page and warn user if appropriate (#638)
- Fixed: Recipe actions throwing errors (thanks @timhae!) (#646)
- Fixed: Simultaneous display of recipe photos and placeholder images
- Fixed: Behavior option "reduce app startup time" not working on Android 12+
- Fixed: Crash on recipe page because server somehow returns wrong floating point format (#652)
- Fixed: Floating action button not hidden in shopping mode
- Fixed: Occasionally dark toolbar menu icons in dark mode (thanks @martin-braun!) (#631)
- Fixed: Unintended length limit on bottom sheet for general text and number input (#657)
- Fixed: Occasional crashes on stock journal and master product page
- Fixed: Stores selection list not redesigned
- Fixed: Recipe preparation not displayed in certain conditions
- Fixed: Duplicate expired items on stock overview page with filters "expired" and "overdue"
- Fixed: Products without own stock not hidden in filters on stock overview page (#660)
- Fixed: Amount of products without own stock not hidden on stock overview page (#654)
- Fixed: Navigation bar color on devices without gesture navigation

## 3.0.0

- New: Material You redesign with dynamic colors for Android 12+
- New: Replaced HTML editor for recipe and product descriptions (same like on grocy server)
- New: Support for more than two decimal places for amounts & prices, uses option from server (#459)
- New: Product option "Move on open" (#569)
- New: Option in behavior settings for copying barcode note to stock entry note field (#609)
- New: Option on purchase page to print stock label and default option on master product page (#570)
- Improved: Layout on large screens