@@ -7,6 +7,7 @@
 - Improved: Network and user interface behavior when offline (#492)
 - Improved: Stock overview page has new status filter "not fresh" for combined results (#661)
 - Improved: "Should not be frozen" toggle on master product page and warn user if appropriate (#638)
+- Improved: Info shown for action button on overview start page (#540)
 - Fixed: Recipe actions throwing errors (thanks @timhae!) (#646)
 - Fixed: Simultaneous display of recipe photos and placeholder images
 - Fixed: Behavior option "reduce app startup time" not working on Android 12+
